--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\PlanetDatabase.Infrastructure\packages.config" />
   <repository path="..\PlanetDatabase.Model\packages.config" />
   <repository path="..\PlanetDatabase.UnitTestProject\packages.config" />
   <repository path="..\PlanetDatabase.Web\packages.config" />
