Implement Planet Business And UnitTest

--- a/PlanetDatabase.Business/PlanetDatabase.Business.csproj
+++ b/PlanetDatabase.Business/PlanetDatabase.Business.csproj
@@ -30,7 +30,15 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -39,8 +47,23 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="IPlanetBusiness.cs" />
+    <Compile Include="PlanetBusiness.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\PlanetDatabase.Infrastructure\PlanetDatabase.Infrastructure.csproj">
+      <Project>{a132f847-1cda-431a-acdf-e87c5ed47fea}</Project>
+      <Name>PlanetDatabase.Infrastructure</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\PlanetDatabase.Model\PlanetDatabase.Model.csproj">
+      <Project>{456ad197-01c5-427d-a854-46fb6d71b4ad}</Project>
+      <Name>PlanetDatabase.Model</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="App.config" />
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
