Adjust localDB path in connectionstring: Please verify thr files: App.config (In test project) Web.config (In Web Application)

--- a/PlanetDatabase.Web/Web.config
+++ b/PlanetDatabase.Web/Web.config
@@ -9,6 +9,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
+    <!--Please, verify LocalDB(PlanetDatabase) file path-->
+    <add name="PlanetDatabase" connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=C:\Users\ch4v35-n0t3\Documents\Visual Studio 2013\Projects\PlanetDatabase\PlanetDatabase.Web\App_Data\PlanetDatabase.mdf;Integrated Security=True"  providerName="System.Data.SqlClient"/>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-PlanetDatabase-20151013025319.mdf;Initial Catalog=aspnet-PlanetDatabase-20151013025319;Integrated Security=True"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
