--- a/PlanetDatabase.Web/Web.config
+++ b/PlanetDatabase.Web/Web.config
@@ -10,7 +10,7 @@
   </configSections>
   <connectionStrings>
     <!--Please, verify LocalDB(PlanetDatabase) file path-->
-    <add name="PlanetDatabase" connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=C:\Users\ch4v35-n0t3\Documents\Visual Studio 2013\Projects\PlanetDatabase\PlanetDatabase.Web\App_Data\PlanetDatabase.mdf;Integrated Security=True"  providerName="System.Data.SqlClient"/>
+    <add name="PlanetDatabase" connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=|DataDirectory|\PlanetDatabase.mdf;Integrated Security=True"  providerName="System.Data.SqlClient"/>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-PlanetDatabase-20151013025319.mdf;Initial Catalog=aspnet-PlanetDatabase-20151013025319;Integrated Security=True"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
