--- a/PlanetDatabase.Infrastructure/App.config
+++ b/PlanetDatabase.Infrastructure/App.config
@@ -4,6 +4,10 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
+  <connectionStrings>
+    <!--Please, verify LocalDB(PlanetDatabase) file path-->
+    <add name="PlanetDatabase" connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=C:\Users\aclo\Desktop\Git\PlanetDatabase.com\PlanetDatabase.Infrastructure\App_Data\PlanetDatabase.mdf;Integrated Security=True"  providerName="System.Data.SqlClient"/>
+  </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
