--- a/PlanetDatabase.Model/PlanetDatabase.Model.csproj
+++ b/PlanetDatabase.Model/PlanetDatabase.Model.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Entity\EntityBase.cs" />
     <Compile Include="Entity\Planet.cs" />
     <Compile Include="Entity\PlanetDatabaseContext.cs" />
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Entity\Star.cs" />
   </ItemGroup>
