--- a/PlanetDatabase.UnitTestProject/App.config
+++ b/PlanetDatabase.UnitTestProject/App.config
@@ -6,7 +6,7 @@
   </configSections>
   <connectionStrings>
     <!--Please, verify LocalDB(PlanetDatabase) file path-->
-    <add name="PlanetDatabase" connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=C:\Users\ch4v35-n0t3\Documents\Visual Studio 2013\Projects\PlanetDatabase\PlanetDatabase.Infrastructure\App_Data\PlanetDatabase.mdf;Integrated Security=True"  providerName="System.Data.SqlClient"/>
+    <add name="PlanetDatabase" connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=C:\Users\aclo\Desktop\Git\PlanetDatabase.com\PlanetDatabase.Infrastructure\App_Data\PlanetDatabase.mdf;Integrated Security=True"  providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
