Ajust Layout | Add comments to javascript code

--- a/PlanetDatabase.Web/Web.config
+++ b/PlanetDatabase.Web/Web.config
@@ -15,7 +15,7 @@
   </appSettings>
   <connectionStrings>
     <!--Please, verify LocalDB(PlanetDatabase) file path-->
-    <add name="PlanetDatabase" connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=C:\Users\aclo\Desktop\Git\PlanetDatabase.com\PlanetDatabase.Infrastructure\App_Data\PlanetDatabase.mdf;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="PlanetDatabase" connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=|DataDirectory|\PlanetDatabase.mdf;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
