--- a/PlanetDatabase.Web/PlanetDatabase.Web.csproj
+++ b/PlanetDatabase.Web/PlanetDatabase.Web.csproj
@@ -119,7 +119,6 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="App_Data\" />
     <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
@@ -163,6 +162,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="App_Data\PlanetDatabase.mdf" />
+    <Content Include="App_Data\PlanetDatabase_log.ldf">
+      <DependentUpon>PlanetDatabase.mdf</DependentUpon>
+    </Content>
     <Content Include="Areas\HelpPage\HelpPage.css" />
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
